--- a/Tehnical/.settings/org.eclipse.core.resources.prefs
+++ b/Tehnical/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/easy/Test005DoubleLetters.java=UTF-8
+encoding//src/medium/Test005AddingNumbers.java=UTF-8
