--- a/Tehnical/.settings/org.eclipse.core.resources.prefs
+++ b/Tehnical/.settings/org.eclipse.core.resources.prefs
@@ -10,3 +10,4 @@ encoding//src/medium/Test015FixBasicCalculator.java=UTF-8
 encoding//src/medium/Test016FindTheMissingNumber.java=UTF-8
 encoding//src/medium/Test017ArrayOfMultiples.java=UTF-8
 encoding//src/medium/Test018HowManyVowels.java=UTF-8
+encoding//src/medium/Test021PerfectSquarePatch.java=UTF-8
